refactor(sdk): revert java.net.http.HttpClient → Unirest for JDK 8 compatibility
- Restore Unirest dependencies (unirest-java-core, unirest-modules-jackson)
- Set JDK 8 compilation target (release=8, source/target=1.8)
- Delete OpenClawHttpClient + TrustAllSsl (JDK 11+)
- Restore old Unirest-based GatewayHttpClient, OpenAiHttpClient, ToolsInvokeClient
- Fix pattern-matching instanceof → traditional (JDK 8)
- Fix CompletableFuture.delayedExecutor → ScheduledExecutorService (JDK 8)
- Fix List.of() → Collections.singletonList / Arrays.asList (JDK 8)
- Fix text blocks → string concatenation (JDK 8)
- Fix Files.writeString → Files.write (JDK 8)
- All 89 tests pass